--- a/app/src/main/res/layout/activity_choose_currencies.xml
+++ b/app/src/main/res/layout/activity_choose_currencies.xml
@@ -10,64 +10,73 @@
     tools:context=".exchange.ChooseCurrenciesActivity"
     >
 
-    <LinearLayout
+    <com.martinwalls.nea.components.CustomRecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:id="@+id/recycler_view"
+        android:overScrollMode="ifContentScrolls"
+        />
 
-        <TextView
-            style="@style/ChooseCurrenciesListTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="24dp"
-            android:paddingTop="16dp"
-            android:paddingEnd="24dp"
-            android:text="@string/exchange_favourites"
-            />
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical"-->
+        <!--&gt;-->
 
-        <com.martinwalls.nea.components.CustomRecyclerView
-            android:id="@+id/favourite_currencies_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            />
+        <!--<TextView-->
+            <!--style="@style/ChooseCurrenciesListTitle"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingStart="24dp"-->
+            <!--android:paddingTop="16dp"-->
+            <!--android:paddingEnd="24dp"-->
+            <!--android:paddingBottom="8dp"-->
+            <!--android:text="@string/exchange_favourites"-->
+            <!--/>-->
 
-        <TextView
-            android:id="@+id/favourite_currencies_empty"
-            style="@style/ChooseCurrenciesItem"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="24dp"
-            android:paddingTop="16dp"
-            android:paddingEnd="24dp"
-            android:paddingBottom="16dp"
-            android:text="@string/exchange_choose_currencies_no_fav"
-            />
-    </LinearLayout>
+        <!--<com.martinwalls.nea.components.CustomRecyclerView-->
+            <!--android:id="@+id/favourite_currencies_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:overScrollMode="ifContentScrolls"-->
+            <!--/>-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        <!--<TextView-->
+            <!--android:id="@+id/favourite_currencies_empty"-->
+            <!--style="@style/ChooseCurrenciesItem"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingStart="24dp"-->
+            <!--android:paddingTop="16dp"-->
+            <!--android:paddingEnd="24dp"-->
+            <!--android:paddingBottom="16dp"-->
+            <!--android:text="@string/exchange_choose_currencies_no_fav"-->
+            <!--/>-->
+    <!--</LinearLayout>-->
 
-        <TextView
-            style="@style/ChooseCurrenciesListTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="24dp"
-            android:paddingTop="16dp"
-            android:paddingEnd="24dp"
-            android:text="@string/exchange_all_currencies"
-            />
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical"-->
+        <!--&gt;-->
 
-        <com.martinwalls.nea.components.CustomRecyclerView
-            android:id="@+id/all_currencies_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:overScrollMode="never"
-            />
-    </LinearLayout>
+        <!--<TextView-->
+            <!--style="@style/ChooseCurrenciesListTitle"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingStart="24dp"-->
+            <!--android:paddingTop="16dp"-->
+            <!--android:paddingEnd="24dp"-->
+            <!--android:paddingBottom="8dp"-->
+            <!--android:text="@string/exchange_all_currencies"-->
+            <!--/>-->
+
+        <!--<com.martinwalls.nea.components.CustomRecyclerView-->
+            <!--android:id="@+id/all_currencies_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:overScrollMode="ifContentScrolls"-->
+            <!--/>-->
+    <!--</LinearLayout>-->
 
 </LinearLayout>
