editable primary currency value, rates update accordingly

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,8 +124,10 @@
     </style>
 
     <style name="ExchangeCurrentCurrency">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">?textColorDark</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="ExchangeHistoryTimeDivider">
