--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -13,9 +13,14 @@
         android:id="@+id/current_currencies"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:orientation="horizontal"
         >
+
+        <NumberPicker
+            android:id="@+id/currency_picker_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
 
         <TextView
             android:id="@+id/currency_primary"
@@ -31,6 +36,7 @@
             android:id="@+id/swap_currencies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:background="?selectableItemBackgroundBorderless"
@@ -49,6 +55,12 @@
             android:gravity="start|center_vertical"
             tools:text="HKD"
             />
+
+        <NumberPicker
+            android:id="@+id/currency_picker_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
     </LinearLayout>
 
     <!-- main view showing current rate -->
@@ -60,21 +72,19 @@
         android:orientation="horizontal"
         >
 
-        <NumberPicker
-            android:id="@+id/currency_picker_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
 
         <!-- todo allow user input -->
-        <TextView
+        <EditText
             android:id="@+id/currency_primary_value"
             style="@style/ExchangeRateText.Primary"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:backgroundTint="@android:color/transparent"
             android:gravity="center_vertical|end"
-            android:text="1"
+            android:imeOptions="actionDone"
+            android:inputType="numberDecimal"
+            android:text="@string/exchange_primary_start_value"
             />
 
         <TextView
@@ -94,14 +104,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="start|center_vertical"
-            android:text="2.35"
+            android:maxLines="1"
+            tools:text="2.35"
             />
 
-        <NumberPicker
-            android:id="@+id/currency_picker_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
     </LinearLayout>
 
     <com.martinwalls.nea.components.CustomRecyclerView
@@ -109,6 +115,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rate"
+        android:layout_marginTop="48dp"
         android:overScrollMode="never"
         />
 
