--- a/app/src/main/res/layout/activity_new_contract.xml
+++ b/app/src/main/res/layout/activity_new_contract.xml
@@ -161,6 +161,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="4dp"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 >
 
                 <TextView
