--- a/app/src/main/res/layout/dialog_add_new_meat_type.xml
+++ b/app/src/main/res/layout/dialog_add_new_meat_type.xml
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:text="@string/stock_product_new_cancel"
+            android:text="@string/action_cancel"
             />
 
         <Button
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text="@string/stock_product_new_done"
+            android:text="@string/action_done"
             />
     </RelativeLayout>
 
