dialog title style, add new product dialog title in layout file

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,7 @@
 
     <attr name="selectedItemBackgroundColor" format="reference|color" />
 
+    <attr name="dialogTitleStyle" format="reference" />
 
     <declare-styleable name="AddNewTextView">
         <attr name="searchItemType" format="string" />
