--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -7,12 +7,22 @@
     android:orientation="vertical"
     >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/stock_product_new"
+        style="?dialogTitleStyle"
+        android:layout_marginStart="@dimen/dialog_margin_horizontal"
+        android:layout_marginTop="@dimen/dialog_margin_vertical"
+        android:layout_marginEnd="@dimen/dialog_margin_horizontal"
+        android:layout_marginBottom="@dimen/input_spacing_vertical"
+        />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/input_layout_product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
-        android:layout_marginTop="@dimen/dialog_margin_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
         android:layout_marginBottom="@dimen/input_spacing_vertical"
         android:hint="@string/stock_product_input_name"
