--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,8 @@
 
         <item name="dividerColor">@color/divider</item>
         <item name="selectedItemBackgroundColor">@color/light_grey</item>
+
+        <item name="dialogTitleStyle">@style/TextNormal.Dark.Bold</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -57,6 +59,10 @@
     </style>
 
     <style name="TextNormal.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextNormal.Dark.Bold">
         <item name="android:textStyle">bold</item>
     </style>
 
