product list sort by

--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -8,6 +8,8 @@
     <string name="pref_backup_db">backup_db</string>
     <string name="pref_restore_db">restore_db</string>
 
+    <string name="pref_products_sort_by">products_sort_by</string>
+
     <string name="pref_exchange_currency_primary">exchange_currency_primary</string>
     <string name="pref_exchange_currency_secondary">exchange_currency_secondary</string>
 </resources>
