--- a/app/src/main/res/layout/nav_drawer_content.xml
+++ b/app/src/main/res/layout/nav_drawer_content.xml
@@ -20,6 +20,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:gravity="bottom"
+        android:textColor="?textColorNormal"
         />
 
 
