--- a/app/src/main/res/drawable/nav_drawer_item_normal.xml
+++ b/app/src/main/res/drawable/nav_drawer_item_normal.xml
@@ -6,7 +6,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid
-                android:color="@android:color/white" />
+                android:color="?navDrawerBackgroundColor" />
         </shape>
     </item>
 </ripple>
