--- a/app/src/main/res/layout/activity_new_order.xml
+++ b/app/src/main/res/layout/activity_new_order.xml
@@ -87,7 +87,7 @@
 
             <TextView
                 android:id="@+id/add_product"
-                style="@style/TextEmphasisSmall"
+                style="@style/AddAnotherProductText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
@@ -168,7 +168,7 @@
 
         <com.martinwalls.nea.components.AddNewTextView
             android:id="@+id/add_new"
-            style="@style/SearchResultsItemText.Selectable.AddNew"
+            style="@style/SearchResultsItem.Selectable.AddNew"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="24dp"
@@ -186,7 +186,7 @@
 
         <TextView
             android:id="@+id/no_results"
-            style="@style/SearchResultsItemText"
+            style="@style/SearchResultsItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="24dp"
