--- a/app/src/main/res/layout/item_contract.xml
+++ b/app/src/main/res/layout/item_contract.xml
@@ -28,8 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|start"
-        android:textColor="?textColorNormal"
-        android:textSize="16sp"
+        style="@style/ItemInfoSecondary"
         tools:text="Repeats every Wednesday"
         />
 
@@ -39,8 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical|start"
-        android:textColor="?textColorNormal"
-        android:textSize="16sp"
+        style="@style/ItemInfoSecondary"
         tools:text="Destination"
         />
 
