--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -42,8 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical|start"
-            android:textColor="?textColorNormal"
-            android:textSize="16sp"
+            style="@style/ItemInfoSecondary"
             tools:text="Destination"
             />
 
