--- a/app/src/main/res/layout/item_single_info.xml
+++ b/app/src/main/res/layout/item_single_info.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/info_primary"
-        style="@style/TextNormal.Dark"
+        style="@style/TextDark"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
