--- a/app/src/main/res/layout/item_stock.xml
+++ b/app/src/main/res/layout/item_stock.xml
@@ -16,8 +16,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical|start"
-        android:textColor="?textColorDark"
-        android:textSize="20sp"
+        style="@style/ItemInfoPrimary"
         tools:text="Product name"
         />
 
@@ -34,8 +33,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            android:textSize="16sp"
-            android:textColor="?textColorDark"
+            style="@style/ItemAmountPrimary"
             tools:text="1900.00 kg"
             />
 
@@ -45,8 +43,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            android:textSize="16sp"
-            android:textColor="?textColorNormal"
+            style="@style/ItemAmountSecondary"
             tools:text="100 boxes"
             />
     </LinearLayout>
