--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,24 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Deep Purple 500 -->
-    <color name="colorPrimary">#673ab7</color>
+    <color name="colorPrimary">#673ab7</color> <!-- Deep Purple 500 -->
     <color name="colorPrimaryDark">#320b86</color>
     <color name="colorAccent">#ffc107</color>
 
+    <color name="fab_ripple_light">#2fff</color>
+
+
+
+
+
+    <color name="white">#FFFFFF</color>
     <color name="light_grey">#eeeeee</color>
-    <!-- for normal text -->
-    <color name="medium_grey">#8D8D8D</color>
-    <!-- for darker text -->
+    <color name="medium_light_grey">#bcbcbc</color>
+    <color name="medium_dark_grey">#8D8D8D</color>
     <color name="dark_grey">#424242</color>
 
-    <color name="text_medium">@color/medium_grey</color>
-    <color name="text_dark">@color/dark_grey</color>
 
-    <color name="divider">@color/medium_grey</color>
+
+
+    <color name="text_normal">#8D8D8D</color>
+    <color name="text_emphasis">#424242</color>
+
+    <color name="light_selected_item">#eeeeee</color>
+    <color name="dark_selected_item">#424242</color>
+
+
+
+
+
+
+
+
+    <color name="text_light">#bcbcbc</color>
+    <color name="text_lighter">#eeeeee</color>
 
     <color name="error_red">#f44336</color>
 
-    <color name="fab_ripple_light">#2fff</color>
 
     <color name="delete">#FF0000</color>
 
@@ -26,4 +44,11 @@
     <color name="dashboard_graph_bar_req">#e57373</color>
     <color name="dashboard_tooltip">#bbdefb</color>
     <color name="dashboard_tooltip_req">#D32F2F</color>
+
+    <color name="dark_dashboard_graph_bar">#5EA4E2</color>
+    <color name="dark_dashboard_graph_bar_req">#D35454</color>
+    <color name="dark_dashboard_tooltip">#bbdefb</color>
+    <color name="dark_dashboard_tooltip_req">#D32F2F</color>
+
+    <color name="dark_background">#212121</color>
 </resources>
